--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>JS-Bootcamp</title>
 </head>
 <body>
-  <script src="module3/lesson_2/dz/index5.js"></script>
+  <script src="tasks1/index10.js"></script>
 </body>
 </html>
