--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>JS-Bootcamp</title>
 </head>
 <body>
-  <script src="lesson1/index.js"></script>
+  <script src="lesson1/tasks/task7.js"></script>
 </body>
 </html>
