--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>JS-Bootcamp</title>
 </head>
 <body>
-  <script src="module3/lesson_2/dz/index5.js"></script>
+  <script src="array-methods/foreach.js"></script>
+  <script src="array-methods/1_map.js"></script>
+  <script src="array-methods/2_flatMap.js"></script>
+  <script src="array-methods/3_filter.js"></script>
+  <script src="array-methods/4_find.js"></script>
+  <script src="array-methods/5_findIndex.js"></script>
+  <script src="array-methods/6_every-some.js"></script>
+  <script src="array-methods/7_reduce.js"></script>
+  <script src="array-methods/8_sort.js"></script>
 </body>
 </html>
