--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>JS-Bootcamp</title>
 </head>
 <body>
-  <script src="module3/lesson_2/dz/index5.js"></script>
+  <input class="decrement" type="button" value="Decrement">
+  <span class="js-value">0</span>
+  <input class="increment" type="button" value="Increment">
+
+  <script src="lesson1/counter.js"></script>
+  <script src="lesson1/this.js"></script>
 </body>
 </html>
