--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <title>JS-Bootcamp</title>
 </head>
 <body>
-  <input class="decrement" type="button" value="Decrement">
-  <span class="js-value">0</span>
-  <input class="increment" type="button" value="Increment">
-
-  <script src="lesson1/counter.js"></script>
-  <script src="lesson1/this.js"></script>
+  <script src="lesson1/tasks/index6.js"></script>
 </body>
 </html>
