--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>JS-Bootcamp</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <script src="module3/lesson_2/dz/index5.js"></script>
+  <h1>
+    Об'єктна модель документа
+  </h1>
+  <ol>
+    <li><a href="/main/01-query-selector.html">Пошук елементів</a></li>
+    <li><a href="/main/02-props.html">Властивості та атрибути</a></li>
+    <li><a href="/main/03-classlist.html">ClassList</a></li>
+    <li><a href="/main/04-travelsal.html">Навігація по DOM-дереву</a></li>
+    <li><a href="/main/05-creating-element.html">Створення видалення елементів</a></li>
+    <li><a href="/main/06-collections.html"></a></li>
+  </ul>
+
 </body>
 </html>
