--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="/main/03-classlist.html">ClassList</a></li>
     <li><a href="/main/04-travelsal.html">Навігація по DOM-дереву</a></li>
     <li><a href="/main/05-creating-element.html">Створення видалення елементів</a></li>
-    <li><a href="/main/06-collections.html"></a></li>
+    <li><a href="/main/06-collections.html">Collection</a></li>
   </ul>
 
 </body>
