--- a/main/05-creating-element.html
+++ b/main/05-creating-element.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <h2>Creating Delete Element</h2>
     <hr>
 
-
+    <div class="container">
+        <ul class="usernames">
+          <li>Mango</li>
+        </ul>
+    </div>
 
     <hr>
-    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test">
+    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
     <script src="scripts/script-05.js" ></script>
 </body>
 </html>
