--- a/main/02-props.html
+++ b/main/02-props.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>Props</h2>
     <hr>
 
+    <img src="https://source.unsplash.com/100x100/?random=1&eat,bread,dish,meet,egg" alt="myArt">
 
 
     <hr>
-    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test">
+    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
     <script src="scripts/script-02.js" ></script>
 </body>
 </html>
