--- a/main/04-travelsal.html
+++ b/main/04-travelsal.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -14,7 +15,7 @@
 
 
     <hr>
-    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test">
+    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
     <script src="scripts/script-04.js" ></script>
 </body>
 </html>
