--- a/main/06-collections.html
+++ b/main/06-collections.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <h2>Collection</h2>
     <hr>
 
-
+    <ul class="list">
+        <li class="list-item">HTML</li>
+        <li class="list-item">CSS</li>
+        <li class="list-item">JavaScript</li>
+    </ul>
 
     <hr>
-    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test">
+    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
     <script src="scripts/script-06.js" ></script>
 </body>
 </html>
