--- a/main/02-props.html
+++ b/main/02-props.html
@@ -11,8 +11,10 @@
     <h2>Props</h2>
     <hr>
 
+    <button type="button" data-action="save">Save</button>
+    <button type="button" data-action="next">Next</button>
+    <br> <br>
     <img src="https://source.unsplash.com/100x100/?random=1&eat,bread,dish,meet,egg" alt="myArt">
-
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
