--- a/main/03-classlist.html
+++ b/main/03-classlist.html
@@ -12,7 +12,13 @@
     <h2>Class List</h2>
     <hr>
 
-
+    <ul class="list">
+        <li class="list-item">Element 1</li>
+        <li class="list-item">Element 2</li>
+        <li class="list-item">Element 3</li>
+        <li class="list-item">Element 4</li>
+        <li class="list-item">Element 5</li>
+    </ul>
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
