--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="/main/04-travelsal.html">Навігація по DOM-дереву</a></li>
     <li><a href="/main/05-creating-element.html">Створення видалення елементів</a></li>
     <li><a href="/main/06-collections.html">Collection</a></li>
+    <li><a href="/main/07-script.html">Example Cars Collection</a></li>
   </ul>
-
 </body>
 </html>
