--- a/main/04-travelsal.html
+++ b/main/04-travelsal.html
@@ -11,9 +11,9 @@
     
     <h2>Travel</h2>
     <hr>
-
     <ul>
-        <li>First item</li>qwdawd
+        First 
+        <li>First item</li>
         <li>Second item</li>
         <li>Third item</li>
         <li>Fourth item</li>
@@ -23,5 +23,6 @@
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
     <script src="scripts/script-04.js" ></script>
+    <h2>End</h2>
 </body>
 </html>
