--- a/main/01-query-selector.html
+++ b/main/01-query-selector.html
@@ -12,6 +12,19 @@
     <hr>
 
         <ul class="site_nav">
+            <li class="site_item" id="findItem">Главная</li>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+            </ul>
+            <li class="site_item">Настройки</li>
+            <li class="site_item">О нас</li>
+        </ul>
+
+        <ul class="site_nav">
             <li class="site_item">Главная</li>
             <li class="site_item">Товары</li>
             <li class="site_item">Настройки</li>
