--- a/main/02-props.html
+++ b/main/02-props.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <h2>Props</h2>
     <hr>
 
     <button type="button" data-action="save">Save</button>
     <button type="button" data-action="next">Next</button>
     <br> <br>
-    <img src="https://source.unsplash.com/100x100/?random=1&eat,bread,dish,meet,egg" alt="myArt">
+    <img src="https://source.unsplash.com/100x100/?random=1&eat,bread,dish,meet,egg" alt="myArt" id="imgTest" data-userName="Test">
+    <img src="https://source.unsplash.com/100x100/?random=2&eat,bread,dish,meet,egg" alt="myArt" id="imgTest" data-userName="Test">
+    <img src="https://source.unsplash.com/100x100/?random=3&eat,bread,dish,meet,egg" alt="myArt" id="imgTest" data-userName="Test">
+    <img src="https://source.unsplash.com/100x100/?random=4&eat,bread,dish,meet,egg" alt="myArt" id="imgTest" data-userName="Test">
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
