--- a/main/03-classlist.html
+++ b/main/03-classlist.html
@@ -12,8 +12,11 @@
     <h2>Class List</h2>
     <hr>
 
+    <input type="text" id="UserPhone">
+    <br>
+
     <ul class="list">
-        <li class="list-item">Element 1</li>
+        <li class="list-item blue bold">Element 1</li>
         <li class="list-item">Element 2</li>
         <li class="list-item">Element 3</li>
         <li class="list-item">Element 4</li>
