--- a/main/07-script.html
+++ b/main/07-script.html
@@ -14,8 +14,21 @@
 
 
 
+    <table class="collection-item">  
+        <thead>
+            <tr>
+                <th>Производитель</th>
+                <th>Марка</th>
+                <th>Тип</th>
+                <th>Количество</th>
+                <th>Цена</th>
+                <th>Продается</th>
+            </tr>
+        </thead>
+    </table>
+
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    
+    <script defer src="scripts/script-06.js"></script>
 </body>
 </html>
