--- a/main/03-classlist.html
+++ b/main/03-classlist.html
@@ -15,7 +15,7 @@
     <input type="text" id="UserPhone">
     <br>
 
-    <ul class="list">
+    <ul class="list-dark js-list">
         <li class="list-item blue bold">Element 1</li>
         <li class="list-item">Element 2</li>
         <li class="list-item">Element 3</li>
