--- a/index1.html
+++ b/index1.html
@@ -17,6 +17,7 @@
     <li><a href="/main-2/04-event-keyboard.html">Події клавіатури</a></li>
     <li><a href="/main-2/05-event-mouse.html">Події миші</a></li>
     <li><a href="/main-2/06-modal-window.html">Модальне вікно</a></li>
+    <li><a href="/main-2/07-modal-todos.html">Модальне вікно Todos</a></li>
   </ul>
 </body>
 </html>
