--- a/main-2/05-event-mouse.html
+++ b/main-2/05-event-mouse.html
@@ -12,6 +12,10 @@
     <h2>Event Mouse</h2>
     <hr>
 
+    <div class="tomato box box-500 js-parent-box">
+        <div class="blue box box-100 js-cild-box">
+        </div>
+    </div>
     
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
