--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
     <li><a href="https://developer.mozilla.org/ru/docs/Web/Events"><b>All Events MDN</b></a></li>
     <li><a href="/main-2/01-events.html">Слахачі подій</a></li>
     <li><a href="/main-2/02-form-events.html">Подія Submit на формі</a></li>
-    <li><a href="/main-2/03-Input.html">Події інпутів</a></li>
+    <li><a href="/main-2/03-event-input.html">Події інпутів</a></li>
     <li><a href="/main-2/04-event-keyboard.html">Події клавіатури</a></li>
     <li><a href="/main-2/05-event-mouse.html">Події миші</a></li>
     <li><a href="/main-2/06-modal-window.html">Модальне вікно</a></li>
