--- a/main-2/02-form-events.html
+++ b/main-2/02-form-events.html
@@ -16,7 +16,7 @@
         <div role="group">
             <label>
                 Email
-                <input  type="email" name="email">
+                <input  type="email" name="email" value="formData@gmail.coom">
             </label>
             <label>
                 Password
@@ -38,6 +38,11 @@
         <br>
         <button type="submit">Registration</button>
 
+
+        <button class="js-test" type="button">
+            <span>1</span><br><br><br>
+            <span>2</span>
+        </button>
     </form>
 
     <hr>
