--- a/main-2/03-event-input.html
+++ b/main-2/03-event-input.html
@@ -14,22 +14,24 @@
 
     <label>
         Email: 
-        <input type="email" name="email">
-    </label>
+        <input type="email" name="email" class="js-email">
+    </label>    <br>
 
     <label>
-        Email: 
-        <input type="email" name="email">
-    </label>
+        Pass: 
+        <input type="checkbox" name="email" class="js-pass">
+    </label><br>
 
     <label>
-        Email: 
-        <input type="email" name="email">
-    </label>
+        Sub: 
+        <input type="radio" name="sub" class="js-pass">
+        <input type="radio" name="sub" class="js-pass">
+        <input type="radio" name="sub" class="js-pass">
+    </label><br>
 
     <br/>
-    <button type='submit' disabled calss="js-btn">
-        Regestration like <span>Anonym</span>
+    <button type='submit' disabled class="js-btn">
+        Regestration like <span class="js-anonym">Anonym</span>
     </button>
 
     <hr>
