--- a/main-2/04-event-keyboard.html
+++ b/main-2/04-event-keyboard.html
@@ -11,8 +11,8 @@
     
     <h2>Event Keyboard</h2>
     <hr>
-    <p>
-
+    <p class="js-p">
+    <input type="text">
     </p>
     <hr>
     <input type="button" value="<-Back" onclick="history.back()">
