--- a/main-2/01-events.html
+++ b/main-2/01-events.html
@@ -10,9 +10,11 @@
 <body>
     <h2>Events</h2>
     <hr>
-        
+        <input type="button" value="Test" data-action="target-btn">
+        <input type="button" value="Add Event" data-action="add-event">
+        <input type="button" value="Remove Event" data-action="remove-event">
     <hr>
-    <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
+    <input type="button" value="<-Back" onclick="history.back()">
     <script src="scripts/script-01.js" ></script>
 </body>
 </html>
