--- a/main-2/07-modal-todos.html
+++ b/main-2/07-modal-todos.html
@@ -9,15 +9,32 @@
 </head>
 <body class="show-modal">
     
-    <h2>Modal Window</h2>
+    <h2>Todos</h2>
+
+    <div class="js-list box">
+        <div class="box">
+            <h2 class="js-title">Modal Window</h2>
+            <p class="js-body">
+                ...
+            </p>
+        </div>
+        <div class="box">
+            <h2 class="js-title">Modal Window</h2>
+            <p class="js-body">
+                ...
+            </p>
+        </div>
+        <div class="box">
+            <h2 class="js-title">Modal Window</h2>
+            <p class="js-body">
+                ...
+            </p>
+        </div>
+    </div>
+    
 
     <div class="backdrop js-backdrop">
         <div class="modal">
-            <h2 class="js-title">Modal Window</h2>
-            <p class="js-body">
-
-            </p>
-
             <label>
                 Search id:
                 <input type="number" name="findId" min="0">
@@ -26,12 +43,12 @@
             <br>
             <br>
             <input type="button" value="Close" id="closeModalBtn">
-            <input type="button" value="Previous" id="previousBtn">
-            <input type="button" value="Next" id="nextBtn">
         </div>
     </div>
     <input type="button" value="<-Back" onclick="history.back()">
-    <input type="button" value="Open Modal Window" id="openModalBtn">
+    <!-- <input type="button" value="Open Modal Window" id="openModalBtn"> -->
+    <input type="button" value="Previous" id="previousBtn">
+    <input type="button" value="Next" id="nextBtn">
     <script src="scripts/script-07.js" ></script>
 </body>
 </html>
