--- a/main-2/01-events.html
+++ b/main-2/01-events.html
@@ -15,6 +15,6 @@
         <input type="button" value="Remove Event" data-action="remove-event">
     <hr>
     <input type="button" value="<-Back" onclick="history.back()">
-    <script src="scripts/script-01.js" ></script>
+    <script src="scripts/01-events.js" ></script>
 </body>
 </html>
