--- a/main-2/02-form-events.html
+++ b/main-2/02-form-events.html
@@ -47,6 +47,6 @@
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    <script src="scripts/script-02.js" ></script>
+    <script src="scripts/02-form-events.js" ></script>
 </body>
 </html>
