--- a/main-2/03-event-input.html
+++ b/main-2/03-event-input.html
@@ -36,6 +36,6 @@
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    <script src="scripts/script-03.js" ></script>
+    <script src="scripts/03-event-input.js" ></script>
 </body>
 </html>
