--- a/main-2/04-event-keyboard.html
+++ b/main-2/04-event-keyboard.html
@@ -17,6 +17,6 @@
     <hr>
     <input type="button" value="<-Back" onclick="history.back()">
     <input type="button" value="Clear" id="clearButton">
-    <script src="scripts/script-04.js" ></script>
+    <script src="scripts/04-event-keyboard4.js" ></script>
 </body>
 </html>
