--- a/main-2/05-event-mouse.html
+++ b/main-2/05-event-mouse.html
@@ -19,6 +19,6 @@
     
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    <script src="scripts/script-05.js" ></script>
+    <script src="scripts/05-event-mouse.js" ></script>
 </body>
 </html>
