--- a/main-2/06-modal-window.html
+++ b/main-2/06-modal-window.html
@@ -26,6 +26,6 @@
     </div>
     <input type="button" value="<-Back" onclick="history.back()">
     <input type="button" value="Open Modal Window" id="openModalBtn">
-    <script src="scripts/script-06.js" ></script>
+    <script src="scripts/06-modal-window.js" ></script>
 </body>
 </html>
