--- a/main/01-query-selector.html
+++ b/main/01-query-selector.html
@@ -33,6 +33,6 @@
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    <script src="scripts/script-01.js" ></script>
+    <script src="scripts/01-query-selector.js" ></script>
 </body>
 </html>
