--- a/main/03-classlist.html
+++ b/main/03-classlist.html
@@ -25,6 +25,6 @@
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    <script src="scripts/script-03.js" ></script>
+    <script src="scripts/03-classlist.js" ></script>
 </body>
 </html>
