--- a/main/04-travelsal.html
+++ b/main/04-travelsal.html
@@ -22,7 +22,7 @@
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    <script src="scripts/script-04.js" ></script>
+    <script src="scripts/04-travelsal.js" ></script>
     <h2>End</h2>
 </body>
 </html>
