--- a/main/06-collections.html
+++ b/main/06-collections.html
@@ -20,6 +20,6 @@
 
     <hr>
     <input type="button" value="<-Back" onclick="history.back()"> <input type="button" value="Test" id="testButton">
-    <script src="scripts/script-06.js" ></script>
+    <script src="scripts/06-collections.js" ></script>
 </body>
 </html>
