--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>JS-Bootcamp</title>
 </head>
 <body>
-  <script src="module3/lesson_2/dz/index5.js"></script>
+
+<h1>Делегування подій</h1>
+  <ul>
+    <li><a href="./src/01-bubbling.html">Спливання подій</a></li>
+    <li><a href="./src/02-delegation.html">Делегування подій</a></li>
+    <li><a href="./src/03-tags.html">Tags picker</a></li>
+    <li><a href="./src/04-color-picker.html">Color picker</a></li>
+  </ul>
 </body>
 </html>
