--- a/src/04-color-picker.html
+++ b/src/04-color-picker.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div class="backdrop js-backdrop">
+        <div class="modal"></div>
+    </div>
+
     <ul class="colors-box">
         <li class="color-item">
             <div class="color-body blue"></div>
