--- a/src/04-color-picker.html
+++ b/src/04-color-picker.html
@@ -13,9 +13,9 @@
         <div class="modal"></div>
     </div>
 
-    <ul class="colors-box">
-        <li class="color-item">
-            <div class="color-body blue"></div>
+    <ul class="colors-box js-colors-box">
+        <li class="color-item js-color-item">
+            <button class="color-body"></button>
             <div class="color-footer">
                 <div>HEX: #ffffff</div>
                 <div>RGB: 100, 100, 100</div>
