--- a/src/01-bubbling.html
+++ b/src/01-bubbling.html
@@ -10,11 +10,11 @@
 <body>
     <input type="button" value="Главное меню" onclick="history.back()" class="fixed-btn">
 
-    <div class="js-parent box tomato">
+    <div class="js-parent box tomato" data-value="Parrent">
         Parrent
-        <div class="js-child box blue">
+        <div class="js-child box blue" data-value="Child">
             Child
-            <div class="js-descendant box yellow">
+            <div class="js-descendant box yellow" data-value="Descendant">
                 Descendant
             </div>
         </div>
