--- a/src/02-delegation.html
+++ b/src/02-delegation.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="box grey">
+    <div class="box grey js-box" data-group="group-1">
         <button class="delegation-btn js-delegation-btn">Button1</button>
         <button class="delegation-btn js-delegation-btn">Button2</button>
         <button class="delegation-btn js-delegation-btn">Button3</button>
@@ -20,7 +20,51 @@
         <button class="delegation-btn js-delegation-btn">Button8</button>
         <button class="delegation-btn js-delegation-btn">Button9</button>
     </div>
-    <div class="box grey">
+    <div class="box grey js-box-1" data-group="group-2">
+        <button class="delegation-btn js-delegation-btn">Button1</button>
+        <button class="delegation-btn js-delegation-btn">Button2</button>
+        <button class="delegation-btn js-delegation-btn">Button3</button>
+        <button class="delegation-btn js-delegation-btn">Button4</button>
+        <button class="delegation-btn js-delegation-btn">Button5</button>
+        <button class="delegation-btn js-delegation-btn">Button6</button>
+        <button class="delegation-btn js-delegation-btn">Button7</button>
+        <button class="delegation-btn js-delegation-btn">Button8</button>
+        <button class="delegation-btn js-delegation-btn">Button9</button>
+    </div>
+    <div class="box grey js-box-1" data-group="group-3">
+        <button class="delegation-btn js-delegation-btn">Button1</button>
+        <button class="delegation-btn js-delegation-btn">Button2</button>
+        <button class="delegation-btn js-delegation-btn">Button3</button>
+        <button class="delegation-btn js-delegation-btn">Button4</button>
+        <button class="delegation-btn js-delegation-btn">Button5</button>
+        <button class="delegation-btn js-delegation-btn">Button6</button>
+        <button class="delegation-btn js-delegation-btn">Button7</button>
+        <button class="delegation-btn js-delegation-btn">Button8</button>
+        <button class="delegation-btn js-delegation-btn">Button9</button>
+    </div>
+    <div class="box grey js-box-1" data-group="group-4">
+        <button class="delegation-btn js-delegation-btn">Button1</button>
+        <button class="delegation-btn js-delegation-btn">Button2</button>
+        <button class="delegation-btn js-delegation-btn">Button3</button>
+        <button class="delegation-btn js-delegation-btn">Button4</button>
+        <button class="delegation-btn js-delegation-btn">Button5</button>
+        <button class="delegation-btn js-delegation-btn">Button6</button>
+        <button class="delegation-btn js-delegation-btn">Button7</button>
+        <button class="delegation-btn js-delegation-btn">Button8</button>
+        <button class="delegation-btn js-delegation-btn">Button9</button>
+    </div>
+    <div class="box grey js-box-1" data-group="group-5">
+        <button class="delegation-btn js-delegation-btn">Button1</button>
+        <button class="delegation-btn js-delegation-btn">Button2</button>
+        <button class="delegation-btn js-delegation-btn">Button3</button>
+        <button class="delegation-btn js-delegation-btn">Button4</button>
+        <button class="delegation-btn js-delegation-btn">Button5</button>
+        <button class="delegation-btn js-delegation-btn">Button6</button>
+        <button class="delegation-btn js-delegation-btn">Button7</button>
+        <button class="delegation-btn js-delegation-btn">Button8</button>
+        <button class="delegation-btn js-delegation-btn">Button9</button>
+    </div>
+    <div class="box grey js-box-1" data-group="group-6">
         <button class="delegation-btn js-delegation-btn">Button1</button>
         <button class="delegation-btn js-delegation-btn">Button2</button>
         <button class="delegation-btn js-delegation-btn">Button3</button>
