--- a/src/03-tags.html
+++ b/src/03-tags.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="box">
-        <ul class="tags-box">
+        <ul class="tags-box" data-group="group-1">
             <li class="tag-item">
                 <button class="tag-item__btn" data-value="html">#html</button>
             </li>
@@ -37,7 +37,7 @@
             </li>
         </ul>
     
-        <ul class="tags-box">
+        <ul class="tags-box" data-group="group-2">
             <li class="tag-item">
                 <button class="tag-item__btn" data-value="html">#html</button>
             </li>
