--- a/src/03-tags.html
+++ b/src/03-tags.html
@@ -63,6 +63,8 @@
                 <button class="tag-item__btn" data-value="nodjs">#nodjs</button>
             </li>
         </ul>
+
+        <input type="button" value="Send" onclick="sendData()">
     </div>
     
 
