--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="./src/02-delegation.html">Делегування подій</a></li>
     <li><a href="./src/03-tags.html">Tags picker</a></li>
     <li><a href="./src/04-color-picker.html">Color picker</a></li>
+    <li><a href="./src/05-users-example.html">Users example</a></li>
   </ul>
 </body>
 </html>
