--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>JS-Bootcamp</title>
 </head>
 <body>
-  <script src="module3/lesson_2/dz/index5.js"></script>
+    <h1>
+      Модуль 7
+    </h1>
+    <ul>
+      <li><a href="src/01-throttle-debounce.html">throttle-debounce</a></li>
+      <li><a href="src/02-filter.html">filter</a></li>
+      <li><a href="src/03-lazy-load.html">lazy-load</a></li>
+      <li><a href="src/04-lazy-sizes.html">lazy-sizes</a></li>
+    </ul>
+
 </body>
 </html>
