--- a/src/01-throttle-debounce.html
+++ b/src/01-throttle-debounce.html
@@ -12,9 +12,11 @@
     <hr>
     Кол-во вызовов onMouseMove(): <b class="js-count-mouse">0</b>
     <hr>
-    <input type="text"><br>
+    <input type="text" class="js-input"><br>
     Кол-во вызовов onInputChange(): <b class="js-count-input">0</b>
+    <p class="js-output"></p>
     <hr>
+
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="scripts/01-throttle-debounce.js"></script>
 </body>
