--- a/src/02-filter.html
+++ b/src/02-filter.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="button" value="Main Menu" onclick="history.back()">
+    <input type="button" value="Main Menu" onclick="history.back()"><br><br>
+
+    Filter: <input type="text" class="js-filter">
+    <ul class="js-list">
+        
+    </ul>
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="scripts/02-filter.js"></script>
