--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li><a href="src/02-filter.html">filter</a></li>
       <li><a href="src/03-lazy-load.html">lazy-load</a></li>
       <li><a href="src/04-lazy-sizes.html">lazy-sizes</a></li>
-      <li><a href="src/05-example.html">Example</a></li>
+      <li><a href="src/05-users-example.html">Example</a></li>
     </ul>
 
 </body>
