--- a/src/05-users-example.html
+++ b/src/05-users-example.html
@@ -26,9 +26,12 @@
         <div class="input-container ic2">
           <input id="email" class="input" type="text" placeholder=" " />
           <div class="cut cut-short"></div>
-          <label for="email" class="placeholder">Email</>
+          <label for="email" class="placeholder">Email</label>
         </div>
         <button type="text" class="submit">Create User</button>
       </form>
+
+      <script src="./scripts/05-users-data.js"></script>
+      <script src="./scripts/05-users-example.js"></script>
 </body>
 </html>
