--- a/src/05-users-example.html
+++ b/src/05-users-example.html
@@ -5,33 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="userstyles.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input type="button" value="Main Menu" onclick="history.back()"><br><br>
+    <input type="button" value="Main Menu" onclick="history.back()" id="backBtn">
 
-    <form class="form">
-        <div class="title">Welcome</div>
-        <div class="subtitle">Let's create your account!</div>
-        <div class="input-container ic1">
-          <input id="firstname" class="input" type="text" placeholder=" " />
-          <div class="cut"></div>
-          <label for="firstname" class="placeholder">First name</label>
-        </div>
-        <div class="input-container ic2">
-          <input id="lastname" class="input" type="text" placeholder=" " />
-          <div class="cut"></div>
-          <label for="lastname" class="placeholder">Last name</label>
-        </div>
-        <div class="input-container ic2">
-          <input id="email" class="input" type="text" placeholder=" " />
-          <div class="cut cut-short"></div>
-          <label for="email" class="placeholder">Email</label>
-        </div>
-        <button type="text" class="submit">Create User</button>
-      </form>
+    <div class="box-horizontal">
+      <div class="box">
+        <label>
+          Filter: <input type="text" value="" id="user-filter">
+        </label>
+        <ul class="list-user js-list-user">
+            <li class="user-card" id="open-modal">
+                New USER
+            </li>
+        </ul>
+      </div>
+      <div class="box list-posts">
+        <ul class="list-post-body js-list-post-body">
+          <li class="box post-item">
+            
+          </li>
+        </ul>
+        <ul class="list-post-comment">Comments</ul>
+      </div>
+    </div>
 
-      <script src="./scripts/05-users-data.js"></script>
-      <script src="./scripts/05-users-example.js"></script>
+    <div class="backdrop js-backdrop">
+        <form class="modal visible form js-modal-1">
+          <div class="title">Welcome</div>
+          <div class="subtitle">Let's create your account!</div>
+          <div class="input-container ic1">
+            <input id="firstname" class="input" type="text" placeholder=" " />
+            <div class="cut"></div>
+            <label for="firstname" class="placeholder">First name</label>
+          </div>
+          <div class="input-container ic2">
+            <input id="lastname" class="input" type="text" placeholder=" " />
+            <div class="cut"></div>
+            <label for="lastname" class="placeholder">Last name</label>
+          </div>
+          <div class="input-container ic2">
+            <input id="email" class="input" type="text" placeholder=" " />
+            <div class="cut cut-short"></div>
+            <label for="email" class="placeholder">Email</label>
+          </div>
+          <button type="text" class="submit">Create User</button>
+        </form>
+
+        <div class="modal js-modal-2">
+          <h1>album name</h1>
+          <div>
+
+          </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+    <script src="./scripts/05-users-data.js"></script>
+    <script src="./scripts/05-users-example.js"></script>
 </body>
 </html>
