--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="src/03-lazy-load.html">lazy-load</a></li>
       <li><a href="src/04-lazy-sizes.html">lazy-sizes</a></li>
       <li><a href="src/05-users-example.html">Example</a></li>
+      <li><a href="src/chart.html">Example</a></li>
     </ul>
 
 </body>
