--- a/src/05-users-example.html
+++ b/src/05-users-example.html
@@ -17,18 +17,32 @@
           Filter: <input type="text" value="" id="user-filter">
         </label>
         <ul class="list-user js-list-user">
-            <li class="user-card" id="open-modal">
-                New USER
-            </li>
         </ul>
+        <li class="user-card blue" id="open-modal">
+          New USER
+      </li>
       </div>
       <div class="box list-posts">
         <ul class="list-post-body js-list-post-body">
-          <li class="box post-item">
-            
+        </ul>
+        <ul class="list-post-comment js-list-post-comment">
+          <li class="comment-item">
+            <i>email</i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo earum voluptate aperiam maxime quod autem eos facilis praesentium iste quos, dignissimos itaque ad id repudiandae libero quam ullam perspiciatis!</p>
+          </li>
+          <li class="comment-item">
+            <i>email</i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo earum voluptate aperiam maxime quod autem eos facilis praesentium iste quos, dignissimos itaque ad id repudiandae libero quam ullam perspiciatis!</p>
+          </li>
+          <li class="comment-item">
+            <i>email</i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo earum voluptate aperiam maxime quod autem eos facilis praesentium iste quos, dignissimos itaque ad id repudiandae libero quam ullam perspiciatis!</p>
+          </li>
+          <li class="comment-item">
+            <i>email</i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo earum voluptate aperiam maxime quod autem eos facilis praesentium iste quos, dignissimos itaque ad id repudiandae libero quam ullam perspiciatis!</p>
           </li>
         </ul>
-        <ul class="list-post-comment">Comments</ul>
       </div>
     </div>
 
@@ -56,12 +70,17 @@
 
         <div class="modal js-modal-2">
           <h1>album name</h1>
-          <div>
-
+          <div class="box list-photo js-list-photo">
+            
           </div>
         </div>
     </div>
-
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js"
+    integrity="sha512-q583ppKrCRc7N5O0n2nzUiJ+suUv7Et1JGels4bXOaMFQcamPk9HjdUknZuuFjBNs7tsMuadge5k9RzdmO+1GQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="./scripts/05-users-data.js"></script>
     <script src="./scripts/05-users-example.js"></script>
