--- a/src/05-users-example.html
+++ b/src/05-users-example.html
@@ -66,7 +66,6 @@
     referrerpolicy="no-referrer"
   ></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script src="./scripts/05-users-data.js"></script>
-    <script src="./scripts/05-users-example.js"></script>
+    <script type="module" src="./scripts/05-users-example.js"></script>
 </body>
 </html>
