--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="userstyles.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/userstyles.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <input type="button" value="Main Menu" onclick="history.back()" id="backBtn">
@@ -66,7 +66,6 @@
     referrerpolicy="no-referrer"
   ></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script src="./scripts/05-users-data.js"></script>
-    <script src="./scripts/05-users-example.js"></script>
+    <script src="./js/05-users-example.js"></script>
 </body>
 </html>
