--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
       <li><a href="01-timeout.html">window.setTimeout()</a></li>
       <li><a href="02-interval.html">window.setInterval()</a></li>
       <li><a href="03-notification.html">Мастерская: оповещение</a></li>
-      <li><a href="04-subscription.html">Мастерская: промпт подписки</a></li>
       <li><a href="05-date.html">Дата и время</a></li>
       <li><a href="06-timer.html">Мастерская: таймер</a></li>
+      <li><a href="07-bench.html">Benchmark</a></li>
     </ul>
 
     <script src="index.js"></script>
