--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
     </thead>
     <tbody></tbody>
   </table>
-  <script type="module" src="./scripts/script.js"></script>
+  <!-- <script type="module" src="./scripts/01-promise-api.js"></script> -->
+  <!-- <script type="module" src="./scripts/02-promisification.js"></script> -->
+  <!-- <script type="module" src="./scripts/03-racetrack.js"></script> -->
+  <script type="module" src="./scripts/query.js"></script>
 </body>
 </html>
