--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,6 @@
   <!-- <script type="module" src="./scripts/01-promise-api.js"></script> -->
   <!-- <script type="module" src="./scripts/02-promisification.js"></script> -->
   <!-- <script type="module" src="./scripts/03-racetrack.js"></script> -->
-  <script type="module" src="./scripts/query.js"></script>
+  <script type="module" src="./scripts/tasks.js"></script>
 </body>
 </html>
