--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button class="js-start-race">Следующий заезд</button>
+  <button class="js-start-race">Завантажити</button>
   
   <hr />
   <p class="js-winner"></p>
+
+  <ul class="" id="listItems">
+
+  </ul>
   <p class="js-progress"></p>
   <hr />
+
+
+  <div class="spinner-border js-spiner"></div>
 
   <table class="js-results-table">
     <thead>
@@ -25,9 +32,6 @@
     </thead>
     <tbody></tbody>
   </table>
-  <!-- <script type="module" src="./scripts/01-promise-api.js"></script> -->
-  <!-- <script type="module" src="./scripts/02-promisification.js"></script> -->
-  <!-- <script type="module" src="./scripts/03-racetrack.js"></script> -->
-  <script type="module" src="./scripts/tasks.js"></script>
+  <script type="module" src="./scripts/03-racetrack.js"></script>
 </body>
 </html>
