--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button class="js-start-race">Завантажити</button>
+  <button class="js-previous-page" disabled>Попередня сторінка</button>
+  <button class="js-next-page">Наступна сторінка</button>
   
   <hr />
   <p class="js-winner"></p>
