--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
         <li><a href="02-cors.html">Cross-Origin Resource Sharing</a></li>
     </ul>
   
-    <script type="module" src="./js/script1.js"></script>
+    <script src="./js/script1.js"></script>
 </body>
 </html>
