--- a/src/01-fetch-api.html
+++ b/src/01-fetch-api.html
@@ -15,6 +15,7 @@
   <body>
     <p><a href="index.html">На главную</a></p>
 
+    <hr>
     <form class="form-inline search-form js-search-form">
       <div class="form-group">
         <input type="text" class="form-control" name="query" />
@@ -24,6 +25,18 @@
     </form>
 
     <div class="js-card-container"></div>
+    <hr>
+
+    <form class="form-inline search-form js-search-form1">
+      <div class="form-group">
+        <input type="text" class="form-control" name="query" />
+      </div>
+
+      <button type="submit" class="btn btn-primary">Искать</button>
+    </form>
+
+    <div class="js-card-container1"></div>
+
 
     <script src="js/01-script.js"></script>
   </body>
