--- a/src/01-fetch-api.html
+++ b/src/01-fetch-api.html
@@ -37,6 +37,27 @@
 
     <div class="js-card-container1"></div>
 
+    <hr>
+    <form class="form-inline search-form js-search-form2">
+      <div class="form-group">
+        <input type="text" class="form-control" name="query" />
+      </div>
+
+      <button type="submit" class="btn btn-primary">Искать</button>
+    </form>
+
+    <div class="js-card-container2"></div>
+    <hr>
+    <form class="form-inline search-form js-search-form3">
+      <div class="form-group">
+        <input type="text" class="form-control" name="lat" value='48.85824'/>
+        <input type="text" class="form-control" name="lng" value='2.29451'/>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Искать</button>
+    </form>
+
+    <div class="js-card-container3"></div>
 
     <script src="js/01-script.js"></script>
   </body>
