--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="news-list js-articl-list">
-        
+       
     </div>
     <button
       type="button"
@@ -42,6 +42,6 @@
 
       <span class="label">Показать ещё</span>
     </button>
-    <script type="module" src="./js/01-script.js"></script>
+    <script src="./js/01-script.js"></script>
 </body>
 </html>
