--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,6 @@
     <li><a href="./pages/rooms.html"><h2>Room</h2></a></li>
   </ul>
     
-    <script src="./js/01-script.js"></script>
+    <script src="./js/01-async-await.js"></script>
 </body>
 </html>
