--- a/src/pages/users.html
+++ b/src/pages/users.html
@@ -61,7 +61,7 @@
 
     </div>
     
-    <button disabled
+    <button
       type="button"
       class="btn btn-primary button js-btn-load"
       data-action="load-more"
