--- a/src/01-fetch-api.html
+++ b/src/01-fetch-api.html
@@ -53,12 +53,11 @@
         <input type="text" class="form-control" name="lat" value='48.85824'/>
         <input type="text" class="form-control" name="lng" value='2.29451'/>
       </div>
-
       <button type="submit" class="btn btn-primary">Искать</button>
     </form>
-
+    <div id="map_link"></div>
+    <hr>
     <div class="js-card-container3"></div>
-
     <script src="js/01-script.js"></script>
   </body>
 </html>
