--- a/src/01-fetch-api.html
+++ b/src/01-fetch-api.html
@@ -17,47 +17,50 @@
 
     <hr>
     <form class="form-inline search-form js-search-form">
-      <div class="form-group">
+      <div class="form-group m-2">
         <input type="text" class="form-control" name="query" />
       </div>
-
       <button type="submit" class="btn btn-primary">Искать</button>
     </form>
-
     <div class="js-card-container"></div>
     <hr>
 
+
+
+
     <form class="form-inline search-form js-search-form1">
-      <div class="form-group">
-        <input type="text" class="form-control" name="query" />
+      <div class="form-group m-2">
+        <input type="text" class="form-control" name="query"/>
       </div>
-
       <button type="submit" class="btn btn-primary">Искать</button>
     </form>
-
     <div class="js-card-container1"></div>
-
     <hr>
+
+<!-- 
+
     <form class="form-inline search-form js-search-form2">
-      <div class="form-group">
+      <div class="form-group m-2">
         <input type="text" class="form-control" name="query" />
       </div>
-
       <button type="submit" class="btn btn-primary">Искать</button>
     </form>
-
     <div class="js-card-container2"></div>
     <hr>
+
+
+
+
     <form class="form-inline search-form js-search-form3">
-      <div class="form-group">
+      <div class="form-group m-2">
         <input type="text" class="form-control" name="lat" value='48.85824'/>
         <input type="text" class="form-control" name="lng" value='2.29451'/>
       </div>
       <button type="submit" class="btn btn-primary">Искать</button>
     </form>
-    <div id="map_link"></div>
-    <hr>
     <div class="js-card-container3"></div>
+    <hr> -->
+    
     <script src="js/01-script.js"></script>
   </body>
 </html>
